--- a/html/lib/css/styleStart.css
+++ b/html/lib/css/styleStart.css
@@ -35,6 +35,11 @@ h3{
     font-style: italic;
     text-shadow: 5px 5px 50px chocolate;
 }
+ul{
+    font-size: 4rem;
+    margin-left: 100px;
+    display: inline;
+}
 
 input{
     margin-bottom: 20px;
@@ -84,6 +89,8 @@ input[type="text"]{
     float: right;
     padding: 10px;
     border-radius: 15px;
+
+
 }
 #vorige{
 
@@ -115,6 +122,24 @@ input[type="text"]{
     font-size: 4rem;
     border-radius: 15px;
 
+}
+.scorebutt{
+    display: inline-block;
+    font-size: 2.5rem;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    margin-left: 80px;
+    margin-top: 27%;
+
+}
+.scoretitel{
+    display: block;
+    margin-top: 30px;
+}
+.spelerslijst{
+    margin-right: 800px;
 }
 input:hover{
 
