zoom in zoom out js

--- a/html/lib/css/styleGame.css
+++ b/html/lib/css/styleGame.css
@@ -182,11 +182,11 @@ body {
     color: white;
     padding: 15px 32px;
     border-radius: 3%;
-    font-size: 16px;
+
     display: block;
     margin-bottom: 15px;
     transition: 1s;
-
+    font-size:1vw;
 }
 
 #buttons input[type = button]:hover{
@@ -194,11 +194,14 @@ body {
     color:black;
     width: 120%;
     transition: 1s;
+
 }
 
 #buttons{
+
     position: absolute;
-    left: 80%;
+    left: 75%;
+    right:10%;
 }
 
 
@@ -215,7 +218,8 @@ body {
 }
 
 .kaartOpVeld li img{
-    width:10%; margin-left: auto;
+    width:10%;
+    margin-left: auto;
     margin-right: auto;
 }
 .kaartOpVeld li{
@@ -245,6 +249,7 @@ body {
     width: 100%;
 
 }
+
 
 #log{
     font-size: 2vw;
