--- a/WebLink/web/lib/css/styleGame.css
+++ b/WebLink/web/lib/css/styleGame.css
@@ -240,12 +240,47 @@ body {
 .koopKaart{
     position: absolute;
     margin-left: -5%;
-    margin-top: 21%;
-    width:5%;
-    height:5%;
+    margin-top: 19%;
+    width: 5%;
+    height: 10%;
     z-index: 5;
+    background-image: url("../images/buy-256.png");
+    background-size: 65%;
+    background-position: 6px;
+    background-repeat: no-repeat;
     background-color: aqua;
+    border-radius: 30%;
+    transition: 0.8s;
 }
+.koopKaart:hover{
+    background-image: url("../images/buy-xxl.png");
+    background-size: 65%;
+    background-position: 6px;
+    background-repeat: no-repeat;
+    background-color: orange;
+    border-radius: 30%;
+    transition: 1s;
+}
+.geldcurse .koopKaart{
+    position: absolute;
+    margin-left: -9%;
+    margin-top: 23%;
+    background-position: 2px;
+    background-size: 85%;
+    width: 8%;
+    height: 6%;
+}
+.overwinningskaarten .koopKaart{
+    position: absolute;
+    margin-left: -9%;
+    margin-top: 28%;
+    background-position: 2px;
+    background-size: 85%;
+    width: 9%;
+    height: 8%
+
+}
+
 
 /*veldkaarten*/
 
