--- a/WebLink/web/lib/css/styleGame.css
+++ b/WebLink/web/lib/css/styleGame.css
@@ -332,7 +332,7 @@ body {
 
 .stapel{
     position: absolute;
-    background-color: #C4C98F;
+    background-color: darkgreen;
     padding: 10px;
     width: 5%;
     bottom:1%;
