--- a/WebLink/web/lib/css/styleStart.css
+++ b/WebLink/web/lib/css/styleStart.css
@@ -241,6 +241,9 @@ audio{
     display: none;
 
 }
+
+
+
 .carousel ul li img{
     margin-left: auto;
     margin-right: auto;
@@ -262,4 +265,8 @@ audio{
     font-weight: normal;
     font-style: normal;
 
+}
+/*scorepagina*/
+#spelers, #punten{
+    display: inline-block;
 }
